story actual final

--- a/homework-story.html
+++ b/homework-story.html
@@ -31,7 +31,7 @@
 
     <p>The Toronto Raptors are slated 4th. This comes with the assumption that Kawhi Leonard is in the starting line-up. In my opinion, if you aren’t going to place Boogie with the Dubs, you can’t place The Klaw with the Raps. He simply did not end the season playing, and to assume his return will cause such a stranglehold is speculation at best.</p>
   </div>
-  <div id="rankings"   
+  <div id="rankings">  
     <h3>Under the radar</h3>
       <p>The Spurs? Where did they land? Well, Bleacher Report’s Zach Buckley has them in at 12th.</p>
       <p>So, between the Raptors and the Spurs, the rankings are thus:</p>
